k8s/services/server/overlays/dev/patches/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ml-server-svc
  namespace: ml-server-dev
