k8s/services/server/overlays/dev/patches/HTTPRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ml-server-route
spec:
  hostnames:
  - ml-server-dev
